Fix card background in dark mode
Card doesn't have elevation when dark mode is set. This commit fixes it, following md guidelines.

--- a/src/theme/common.app.scss
+++ b/src/theme/common.app.scss
@@ -199,3 +199,7 @@ ion-item {
   background: rgba(0, 0, 0, 0.0) !important;
   --background: rgba(0, 0, 0, 0.0) !important;
 }
+
+ion-card {
+  --background: var(--ion-card-md-color) !important;
+}
